argocd/spring-boot/sprint-boot-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sprint-boot
  namespace: default
  labels:
    app: sprint-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprint-boot
  template:
    metadata:
      labels:
        app: sprint-boot
    spec:
      containers:
        - name: sprint-boot-db
          image: 13.50.194.17:5000/sprint-boot_db:5
          ports:
          - containerPort: 3306
        - name: sprint-boot-frontend
          image: 13.50.194.17:5000/sprint-boot_frontend:5
          ports:
          - containerPort: 3000
        - name: sprint-boot-backend
          image: 13.50.194.17:5000/sprint-boot_backend:5
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---

apiVersion: v1
kind: Service
metadata:
  name: sprint-boot
  namespace: default
spec:
  selector:
    app: sprint-boot
  ports:
  - name: http
    targetPort: 3000
    port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  selector:
    app: sprint-boot
  ports:
  - name: tcp
    targetPort: 3306
    port: 3306
